--- a/index.html
+++ b/index.html
@@ -4,33 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Week In AkiraChix</title>
+    <title>Document</title>
 </head>
-<body>
-    <h1>
-        My First Week In AkiraChix.
-    </h1>
-    <p>
+<style>
+    .form{color: blue;
 
-    The experience had both good and bad experiences. Some are listed below.
-      </p>
-    <h2>
-        Good experiences
-    </h2>
-    <ol>
-       <li>Good environment</li> 
-       <li>Good food</li>
-       <li>Great teacher</li>
-       <li>Kind alluminaes</li>
-             
-    </ol>
-    <h3>
-      Bad experiences
-    </h3>
-    <ul>
-        <li>Cleaning utensils</li>
-    </ul>
-    <img src="https://static6.depositphotos.com/1034557/629/i/600/depositphotos_6291563-stock-photo-magnifying-glass-experience.jpg" alt="image"> width5px
-    
+    }
+    #age{
+        color: blueviolet;
+    }
+    #heading{
+        color: aquamarine;
+    }
+</style>
+<body>
+ <form class="form">
+    <h1 id="heading"> Registration form</h1>
+    <label>firstname</label>
+    <input type=text placeholder="enter your first namei.e nana">
+    <br>
+    <br/>
+    <label>lastname</label>
+    <input type=text placeholder="enterlastname i.e wanja">
+    <br>
+    <br/>
+    <label> age</label>
+    <input type= number placeholder="20">
+    <br>
+    <br/>
+    <label>gender</label>
+    <input type=string placeholder="female">
+    <br>
+    <br/>
+    <label>email</label>
+    <input type= email placeholder="warukiralynette@gmail.com">
+    <br>
+    <br/>
+    <label>phonenumber</label>
+    <input type=telephone placeholder="0759826104">
+    <br>
+    <br>
+    <label>password</label>
+    <input type=password placeholder="........">
+    <br>
+    <br/>
+    <label>country</label>
+    <input type=string placeholder="Kenya">
+    <br>
+    <br/>
+    <label>D.O.B</label>
+    <input type="date"placeholder="date"/>
+ </form>
 </body>
 </html>
